# email-refiner-agent

./: .gitignore  api_mode.ipynb  api_mode_sse.ipynb  code_mode.ipynb  deploy.py  main.py  prompt.py  pyproject.toml  remote.py  session.db
email_refiner/: agent.py  prompt.py
travel_advisor_agent/: TravelEval.evalset.json  agent.py  prompt.py
travel_advisor_agent/.adk/eval_history/: travel_advisor_agent_TravelEval_1764051003.2693005.evalset_result.json
