[project]
name = "email-refiner-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudpickle>=3.1.2",
    "google-adk[eval]<1.16.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.128.0",
    "google-genai>=1.31.0",
    "litellm>=1.76.0",
    "requests>=2.32.5",
    "sseclient-py>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
